--- a/src/styles/components/_select-department.scss
+++ b/src/styles/components/_select-department.scss
@@ -13,6 +13,7 @@
   border-radius: vw(20);
   transition: opacity 0.3s ease;
   cursor: pointer;
+  text-align: center;
 
   &:hover {
     opacity: 0.8;
@@ -34,6 +35,7 @@
 }
 
 .select-department__text {
+  text-align: center;
   user-select: none;
 }
 
